feat: added buttons

--- a/src/css/badge.css
+++ b/src/css/badge.css
@@ -1,6 +1,7 @@
 .badge-wrapper {
   position: relative;
-  display: inline-block;
+  /* display: inline-block; */
+  display: inline-flex;
 }
 .badge {
   position: absolute;
@@ -11,6 +12,8 @@
   justify-content: center;
   align-items: center;
   min-width: 20px;
+  /* max-width: 28px; */
+  width: auto;
   height: 20px;
   /* background-color: red; */
   /* transform: scale(1) translate(50%, -50%); */
@@ -42,6 +45,7 @@
 
 .badge-dot {
   width: 16px;
+  min-width: 16px;
   height: 16px;
   border: 3px outset var(--black-color1);
   border-radius: 50%;
@@ -58,10 +62,12 @@
 }
 .badge-dot.badge-dot--sm {
   width: 12px;
+  min-width: 12px;
   height: 12px;
 }
 .badge-dot.badge-dot--lg {
   width: 20px;
+  min-width: 20px;
   height: 20px;
   /* min-width: 16px;
   max-width: 16px;
@@ -70,5 +76,9 @@
 }
 
 .badge-wrapper .badge--bottom {
-  transform: scale(1) translate(40%, 100%);
+  /* transform: scale(1) translate(40%, 100%); */
+  top: 100%;
+  transform: scale(1) translate(30%, -70%);
+  transform-origin: 100% 0%;
+  /* bottom: 0; */
 }
