--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2,6 +2,7 @@
 @import url("./avatar.css");
 @import url("./alert.css");
 @import url("./badge.css");
+@import url("./button.css");
 /* border box */
 html {
   box-sizing: border-box;
