--- a/src/css/alert.css
+++ b/src/css/alert.css
@@ -7,6 +7,12 @@
   display: flex;
   align-items: center;
   position: relative;
+  /* test */
+  background-color: rgb(9, 9, 9);
+  color: white;
+}
+.alert > .alert__icon > svg {
+  fill: var(--white-color1);
 }
 .alert--error {
   background-color: rgb(24, 6, 5);
@@ -120,6 +126,15 @@
 }
 
 /* alert-light */
+.alert--light {
+  background-color: var(--white-color1);
+  color: var(--black-color1);
+}
+.alert--light:not(.alert--error, .alert--warning, .alert--info, .alert--success)
+  > .alert__icon
+  > svg {
+  fill: var(--black-color1);
+}
 .alert--light.alert--error {
   background-color: rgb(253, 236, 234);
   color: rgb(97, 26, 21);
@@ -140,6 +155,7 @@
 /* alert-outline */
 .alert.alert--outline {
   background-color: transparent;
+  border: 1px solid var(--white-color1);
 }
 .alert--error.alert--outline {
   border: 1px solid #f44336;
