--- a/src/css/alert.css
+++ b/src/css/alert.css
@@ -117,6 +117,7 @@
   background-color: rgba(255, 255, 255, 0.1);
   /* opacity: 0.3; */
 }
+/*!------------------------------------- add active class-------------------------- */
 .alert__actions svg {
   fill: currentColor;
   /* background-color: transparent; */
