--- a/src/css/style.css
+++ b/src/css/style.css
@@ -3,6 +3,7 @@
 @import url("./alert.css");
 @import url("./badge.css");
 @import url("./button.css");
+@import url("./card.css");
 /* border box */
 html {
   box-sizing: border-box;
@@ -20,8 +21,11 @@ body {
   /* color: var(--white-color1); */
   /* background-color: var(--bg-color); */
 }
-h1 {
+*,
+body,
+html {
   margin: 0;
+  padding: 0;
 }
 
 .App {
