--- a/src/css/utility.css
+++ b/src/css/utility.css
@@ -13,9 +13,12 @@
   --blue-color1: #1876d2;
   --blue-color0: #394baf;
   --blue-color2: #4960e0;
+  --blue-color: #90caf9;
 
   --yellow-color1: #f9ad1a;
   --yellow-color2: #ca8e17;
+
+  --light-grey1: #424242;
 }
 
 /* ---------------------------------------utitlity classes--------------------------------------- */
@@ -33,7 +36,9 @@
 .bg-blue2 {
   background-color: var(--blue-color2);
 }
-
+.bg-grey1 {
+  background-color: var(--light-grey1);
+}
 /* text-colors */
 .text-white {
   color: var(--white-color2);
@@ -41,7 +46,31 @@
 .text-black {
   color: var(--black-color2);
 }
-
+.text-blue {
+  color: var(--blue-color);
+}
+.text-subtitle {
+  font-size: 0.8em;
+  font-weight: 400;
+  line-height: 1.5;
+  letter-spacing: 0.009em;
+}
+.text-title {
+  font-size: 1.2rem;
+  font-weight: 400;
+  line-height: 1.334;
+  letter-spacing: 0em;
+}
+/* font */
+.text-center {
+  text-align: center;
+}
+.text-bold {
+  font-weight: bold;
+}
+.text-para {
+  font-size: 0.875rem;
+}
 /* icon */
 .icon-sm {
   width: 24px;
@@ -73,16 +102,71 @@
 }
 
 /* margin */
+.mr-6 {
+  margin-right: 1.5rem;
+}
+.mr-5 {
+  margin-right: 1.25rem;
+}
 .mr-4 {
   margin-right: 1rem;
 }
+.mr-3 {
+  margin-right: 0.75rem;
+}
+.mr-2 {
+  margin-right: 0.5rem;
+}
+.mb-4 {
+  margin-bottom: 1rem;
+}
+.ml-auto {
+  margin-left: auto;
+}
+/* padding */
+.pt-3 {
+  padding-top: 0.75rem;
+}
+.pt-4 {
+  padding-top: 1rem;
+}
+/* border */
+.border-top {
+  border-top: 1px solid rgba(189, 185, 185, 0.589);
+}
+/* width */
+[class*="w-1/2"] {
+  width: 50%;
+}
+[class*="w-1/3"] {
+  width: 33.333333%;
+}
+[class*="w-2/3"] {
+  width: 66.666666%;
+}
+.w-full {
+  width: 100%;
+}
 
-/* font */
+/* height */
+.h-28 {
+  height: 7rem;
+}
+.h-64 {
+  height: 16rem;
+}
 
 /* breakpoints */
 
 /* container */
 .container {
+}
+.container-xs {
+  max-width: 275px;
+}
+.container-xs0 {
+  max-width: 345px;
+  /* max-width: 380px; */
 }
 .container-sm {
   max-width: 640px;
