--- a/src/css/card.css
+++ b/src/css/card.css
@@ -45,6 +45,17 @@
   display: flex;
   /* flex-direction: column; */
 }
+.card > .card__overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 2;
+  padding: 1em;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  display: flex;
+}
 .card__actions {
   /* padding: 0.5em; */
   align-self: flex-start;
