feat: initial styles completed

--- a/src/css/card.css
+++ b/src/css/card.css
@@ -8,6 +8,9 @@
     0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
   transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
 }
+.card--square {
+  border-radius: 0;
+}
 .card__content {
   padding: 1em;
 }
