--- a/src/css/style.css
+++ b/src/css/style.css
@@ -5,6 +5,7 @@
 @import url("./button.css");
 @import url("./card.css");
 @import url("./input.css");
+@import url("./typography.css");
 /* border box */
 html {
   box-sizing: border-box;
