--- a/src/css/utility.css
+++ b/src/css/utility.css
@@ -40,41 +40,10 @@
 .bg-grey1 {
   background-color: var(--light-grey1);
 }
-.bg-gre2 {
+.bg-grey2 {
   background-color: var(--light-grey2);
 }
-/* text-colors */
-.text-white {
-  color: var(--white-color2);
-}
-.text-black {
-  color: var(--black-color2);
-}
-.text-blue {
-  color: var(--blue-color);
-}
-.text-subtitle {
-  font-size: 0.8em;
-  font-weight: 400;
-  line-height: 1.5;
-  letter-spacing: 0.009em;
-}
-.text-title {
-  font-size: 1.2rem;
-  font-weight: 400;
-  line-height: 1.334;
-  letter-spacing: 0em;
-}
-/* font */
-.text-center {
-  text-align: center;
-}
-.text-bold {
-  font-weight: bold;
-}
-.text-para {
-  font-size: 0.875rem;
-}
+
 /* icon */
 .icon-sm {
   width: 24px;
@@ -97,7 +66,584 @@
   height: 98px;
 }
 
-/* fill */
+/* container */
+.container {
+}
+.container-xs {
+  max-width: 275px;
+}
+.container-xs0 {
+  max-width: 345px;
+  /* max-width: 380px; */
+}
+.container-sm {
+  max-width: 640px;
+}
+.container-md {
+  max-width: 768px;
+}
+.container-lg {
+  max-width: 1024px;
+}
+.container-xl {
+  max-width: 1280px;
+}
+.container-2xl {
+  max-width: 1536px;
+}
+
+/* display */
+.hidden {
+  display: none;
+}
+.block {
+  display: block;
+}
+.inline-block {
+  display: inline-block;
+}
+.inline {
+  display: inline;
+}
+.flex {
+  display: flex;
+}
+.inline-flex {
+  display: inline-flex;
+}
+
+/* visibility */
+.visible {
+  visibility: visible;
+}
+.invisible {
+  visibility: hidden;
+}
+
+/* ------------------------------flexbox--------------------------------- */
+/* display */
+/* .flex {
+  display: flex;
+}
+.inline-flex {
+  display: inline-flex;
+} */
+
+/* flex-direction */
+.flex-row {
+  flex-direction: row;
+}
+.flex-row-reverse {
+  flex-direction: row-reverse;
+}
+.flex-col {
+  flex-direction: column;
+}
+.flex-col-reverse {
+  flex-direction: column-reverse;
+}
+
+/* flex-wrap */
+.flex-wrap {
+  flex-wrap: wrap;
+}
+.flex-wrap {
+  flex-wrap: wrap-reverse;
+}
+.flex-nowrap {
+  flex-wrap: nowrap;
+}
+
+/* align items */
+.items-start {
+  align-items: flex-start;
+}
+.items-end {
+  align-items: flex-end;
+}
+.items-center {
+  align-items: center;
+}
+.items-baseline {
+  align-items: baseline;
+}
+.items-stretch {
+  align-items: stretch;
+}
+/* align self */
+.self-auto {
+  align-self: auto;
+}
+.self-start {
+  align-self: flex-start;
+}
+.self-end {
+  align-self: flex-end;
+}
+.self-center {
+  align-self: center;
+}
+.self-stretch {
+  align-self: stretch;
+}
+/* justify content */
+.justify-start {
+  justify-content: flex-start;
+}
+.justify-end {
+  justify-content: flex-end;
+}
+.justify-center {
+  justify-content: center;
+}
+.justify-between {
+  justify-content: space-between;
+}
+.justify-around {
+  justify-content: space-around;
+}
+.justify-evenly {
+  justify-content: space-evenly;
+}
+/* justify self */
+.justify-self-auto {
+  justify-self: auto;
+}
+.justify-self-start {
+  justify-self: start;
+}
+.justify-self-end {
+  justify-self: end;
+}
+.justify-self-center {
+  justify-self: center;
+}
+.justify-self-stretch {
+  justify-self: stretch;
+}
+
+/* flex */
+.flex-1 {
+  flex: 1 1 0%;
+}
+.flex-auto {
+  flex: 1 1 auto;
+}
+.flex-initial {
+  flex: 0 1 auto;
+}
+.flex-none {
+  flex: none;
+}
+
+/* flex-grow */
+.flex-grow {
+  flex-grow: 1;
+}
+.flex-grow-0 {
+  flex-grow: 0;
+}
+
+/* flex-shrink */
+.flex-shrink {
+  flex-shrink: 1;
+}
+.flex-shrink-0 {
+  flex-shrink: 0;
+}
+
+/* colors bg */
+.bg-black {
+  --bg-opacity: 1;
+  background-color: rgba(0, 0, 0, var(--bg-opacity));
+}
+.bg-white {
+  --bg-opacity: 1;
+  background-color: rgba(255, 255, 255, var(--bg-opacity));
+}
+.bg-gray-50 {
+  --bg-opacity: 1;
+  background-color: rgba(249, 250, 251, var(--bg-opacity));
+}
+.bg-gray-100 {
+  --bg-opacity: 1;
+  background-color: rgba(243, 244, 246, var(--bg-opacity));
+}
+.bg-gray-200 {
+  --bg-opacity: 1;
+  background-color: rgba(229, 231, 235, var(--bg-opacity));
+}
+.bg-gray-300 {
+  --bg-opacity: 1;
+  background-color: rgba(209, 213, 219, var(--bg-opacity));
+}
+.bg-gray-400 {
+  --bg-opacity: 1;
+  background-color: rgba(156, 163, 175, var(--bg-opacity));
+}
+.bg-gray-500 {
+  --bg-opacity: 1;
+  background-color: rgba(107, 114, 128, var(--bg-opacity));
+}
+.bg-gray-600 {
+  --bg-opacity: 1;
+  background-color: rgba(75, 85, 99, var(--bg-opacity));
+}
+.bg-gray-700 {
+  --bg-opacity: 1;
+  background-color: rgba(55, 65, 81, var(--bg-opacity));
+}
+.bg-gray-800 {
+  --bg-opacity: 1;
+  background-color: rgba(31, 41, 55, var(--bg-opacity));
+}
+.bg-gray-900 {
+  --bg-opacity: 1;
+  background-color: rgba(17, 24, 39, var(--bg-opacity));
+}
+.bg-red-50 {
+  --bg-opacity: 1;
+  background-color: rgba(254, 242, 242, var(--bg-opacity));
+}
+.bg-red-100 {
+  --bg-opacity: 1;
+  background-color: rgba(254, 226, 226, var(--bg-opacity));
+}
+.bg-red-200 {
+  --bg-opacity: 1;
+  background-color: rgba(254, 202, 202, var(--bg-opacity));
+}
+.bg-red-300 {
+  --bg-opacity: 1;
+  background-color: rgba(252, 165, 165, var(--bg-opacity));
+}
+.bg-red-400 {
+  --bg-opacity: 1;
+  background-color: rgba(248, 113, 113, var(--bg-opacity));
+}
+.bg-red-500 {
+  --bg-opacity: 1;
+  background-color: rgba(239, 68, 68, var(--bg-opacity));
+}
+.bg-red-600 {
+  --bg-opacity: 1;
+  background-color: rgba(220, 38, 38, var(--bg-opacity));
+}
+.bg-red-700 {
+  --bg-opacity: 1;
+  background-color: rgba(185, 28, 28, var(--bg-opacity));
+}
+.bg-red-800 {
+  --bg-opacity: 1;
+  background-color: rgba(153, 27, 27, var(--bg-opacity));
+}
+.bg-red-900 {
+  --bg-opacity: 1;
+  background-color: rgba(127, 29, 29, var(--bg-opacity));
+}
+.bg-yellow-50 {
+  --bg-opacity: 1;
+  background-color: rgba(255, 251, 235, var(--bg-opacity));
+}
+.bg-yellow-100 {
+  --bg-opacity: 1;
+  background-color: rgba(254, 243, 199, var(--bg-opacity));
+}
+.bg-yellow-200 {
+  --bg-opacity: 1;
+  background-color: rgba(253, 230, 138, var(--bg-opacity));
+}
+.bg-yellow-300 {
+  --bg-opacity: 1;
+  background-color: rgba(252, 211, 77, var(--bg-opacity));
+}
+.bg-yellow-400 {
+  --bg-opacity: 1;
+  background-color: rgba(251, 191, 36, var(--bg-opacity));
+}
+.bg-yellow-500 {
+  --bg-opacity: 1;
+  background-color: rgba(245, 158, 11, var(--bg-opacity));
+}
+.bg-yellow-600 {
+  --bg-opacity: 1;
+  background-color: rgba(217, 119, 6, var(--bg-opacity));
+}
+.bg-yellow-700 {
+  --bg-opacity: 1;
+  background-color: rgba(180, 83, 9, var(--bg-opacity));
+}
+.bg-yellow-800 {
+  --bg-opacity: 1;
+  background-color: rgba(146, 64, 14, var(--bg-opacity));
+}
+.bg-yellow-900 {
+  --bg-opacity: 1;
+  background-color: rgba(120, 53, 15, var(--bg-opacity));
+}
+.bg-green-50 {
+  --bg-opacity: 1;
+  background-color: rgba(236, 253, 245, var(--bg-opacity));
+}
+.bg-green-100 {
+  --bg-opacity: 1;
+  background-color: rgba(209, 250, 229, var(--bg-opacity));
+}
+.bg-green-200 {
+  --bg-opacity: 1;
+  background-color: rgba(167, 243, 208, var(--bg-opacity));
+}
+.bg-green-300 {
+  --bg-opacity: 1;
+  background-color: rgba(110, 231, 183, var(--bg-opacity));
+}
+.bg-green-400 {
+  --bg-opacity: 1;
+  background-color: rgba(52, 211, 153, var(--bg-opacity));
+}
+.bg-green-500 {
+  --bg-opacity: 1;
+  background-color: rgba(16, 185, 129, var(--bg-opacity));
+}
+.bg-green-600 {
+  --bg-opacity: 1;
+  background-color: rgba(5, 150, 105, var(--bg-opacity));
+}
+.bg-green-700 {
+  --bg-opacity: 1;
+  background-color: rgba(4, 120, 87, var(--bg-opacity));
+}
+.bg-green-800 {
+  --bg-opacity: 1;
+  background-color: rgba(6, 95, 70, var(--bg-opacity));
+}
+.bg-green-900 {
+  --bg-opacity: 1;
+  background-color: rgba(6, 78, 59, var(--bg-opacity));
+}
+.bg-blue-50 {
+  --bg-opacity: 1;
+  background-color: rgba(239, 246, 255, var(--bg-opacity));
+}
+.bg-blue-100 {
+  --bg-opacity: 1;
+  background-color: rgba(219, 234, 254, var(--bg-opacity));
+}
+.bg-blue-200 {
+  --bg-opacity: 1;
+  background-color: rgba(191, 219, 254, var(--bg-opacity));
+}
+.bg-blue-300 {
+  --bg-opacity: 1;
+  background-color: rgba(147, 197, 253, var(--bg-opacity));
+}
+.bg-blue-400 {
+  --bg-opacity: 1;
+  background-color: rgba(96, 165, 250, var(--bg-opacity));
+}
+.bg-blue-500 {
+  --bg-opacity: 1;
+  background-color: rgba(59, 130, 246, var(--bg-opacity));
+}
+.bg-blue-600 {
+  --bg-opacity: 1;
+  background-color: rgba(37, 99, 235, var(--bg-opacity));
+}
+.bg-blue-700 {
+  --bg-opacity: 1;
+  background-color: rgba(29, 78, 216, var(--bg-opacity));
+}
+.bg-blue-800 {
+  --bg-opacity: 1;
+  background-color: rgba(30, 64, 175, var(--bg-opacity));
+}
+.bg-blue-900 {
+  --bg-opacity: 1;
+  background-color: rgba(30, 58, 138, var(--bg-opacity));
+}
+.bg-indigo-50 {
+  --bg-opacity: 1;
+  background-color: rgba(238, 242, 255, var(--bg-opacity));
+}
+.bg-indigo-100 {
+  --bg-opacity: 1;
+  background-color: rgba(224, 231, 255, var(--bg-opacity));
+}
+.bg-indigo-200 {
+  --bg-opacity: 1;
+  background-color: rgba(199, 210, 254, var(--bg-opacity));
+}
+.bg-indigo-300 {
+  --bg-opacity: 1;
+  background-color: rgba(165, 180, 252, var(--bg-opacity));
+}
+.bg-indigo-400 {
+  --bg-opacity: 1;
+  background-color: rgba(129, 140, 248, var(--bg-opacity));
+}
+.bg-indigo-500 {
+  --bg-opacity: 1;
+  background-color: rgba(99, 102, 241, var(--bg-opacity));
+}
+.bg-indigo-600 {
+  --bg-opacity: 1;
+  background-color: rgba(79, 70, 229, var(--bg-opacity));
+}
+.bg-indigo-700 {
+  --bg-opacity: 1;
+  background-color: rgba(67, 56, 202, var(--bg-opacity));
+}
+.bg-indigo-800 {
+  --bg-opacity: 1;
+  background-color: rgba(55, 48, 163, var(--bg-opacity));
+}
+.bg-indigo-900 {
+  --bg-opacity: 1;
+  background-color: rgba(49, 46, 129, var(--bg-opacity));
+}
+.bg-purple-50 {
+  --bg-opacity: 1;
+  background-color: rgba(245, 243, 255, var(--bg-opacity));
+}
+.bg-purple-100 {
+  --bg-opacity: 1;
+  background-color: rgba(237, 233, 254, var(--bg-opacity));
+}
+.bg-purple-200 {
+  --bg-opacity: 1;
+  background-color: rgba(221, 214, 254, var(--bg-opacity));
+}
+.bg-purple-300 {
+  --bg-opacity: 1;
+  background-color: rgba(196, 181, 253, var(--bg-opacity));
+}
+.bg-purple-400 {
+  --bg-opacity: 1;
+  background-color: rgba(167, 139, 250, var(--bg-opacity));
+}
+.bg-purple-500 {
+  --bg-opacity: 1;
+  background-color: rgba(139, 92, 246, var(--bg-opacity));
+}
+.bg-purple-600 {
+  --bg-opacity: 1;
+  background-color: rgba(124, 58, 237, var(--bg-opacity));
+}
+.bg-purple-700 {
+  --bg-opacity: 1;
+  background-color: rgba(109, 40, 217, var(--bg-opacity));
+}
+.bg-purple-800 {
+  --bg-opacity: 1;
+  background-color: rgba(91, 33, 182, var(--bg-opacity));
+}
+.bg-purple-900 {
+  --bg-opacity: 1;
+  background-color: rgba(76, 29, 149, var(--bg-opacity));
+}
+.bg-pink-50 {
+  --bg-opacity: 1;
+  background-color: rgba(253, 242, 248, var(--bg-opacity));
+}
+.bg-pink-100 {
+  --bg-opacity: 1;
+  background-color: rgba(252, 231, 243, var(--bg-opacity));
+}
+.bg-pink-200 {
+  --bg-opacity: 1;
+  background-color: rgba(251, 207, 232, var(--bg-opacity));
+}
+.bg-pink-300 {
+  --bg-opacity: 1;
+  background-color: rgba(249, 168, 212, var(--bg-opacity));
+}
+.bg-pink-400 {
+  --bg-opacity: 1;
+  background-color: rgba(244, 114, 182, var(--bg-opacity));
+}
+.bg-pink-500 {
+  --bg-opacity: 1;
+  background-color: rgba(236, 72, 153, var(--bg-opacity));
+}
+.bg-pink-600 {
+  --bg-opacity: 1;
+  background-color: rgba(219, 39, 119, var(--bg-opacity));
+}
+.bg-pink-700 {
+  --bg-opacity: 1;
+  background-color: rgba(190, 24, 93, var(--bg-opacity));
+}
+.bg-pink-800 {
+  --bg-opacity: 1;
+  background-color: rgba(157, 23, 77, var(--bg-opacity));
+}
+.bg-pink-900 {
+  --bg-opacity: 1;
+  background-color: rgba(131, 24, 67, var(--bg-opacity));
+}
+.bg-transparent {
+  background-color: transparent;
+}
+.bg-current {
+  background-color: currentColor;
+}
+.bg-inherit {
+  background-color: inherit;
+}
+.bg-initial {
+  background-color: initial;
+}
+.bg-none {
+  background-image: none;
+}
+.bg-opacity-0 {
+  --bg-opacity: 0;
+}
+.bg-opacity-5 {
+  --bg-opacity: 0.05;
+}
+.bg-opacity-10 {
+  --bg-opacity: 0.1;
+}
+.bg-opacity-20 {
+  --bg-opacity: 0.2;
+}
+.bg-opacity-25 {
+  --bg-opacity: 0.25;
+}
+.bg-opacity-30 {
+  --bg-opacity: 0.3;
+}
+.bg-opacity-40 {
+  --bg-opacity: 0.4;
+}
+.bg-opacity-50 {
+  --bg-opacity: 0.5;
+}
+.bg-opacity-60 {
+  --bg-opacity: 0.6;
+}
+.bg-opacity-70 {
+  --bg-opacity: 0.7;
+}
+.bg-opacity-75 {
+  --bg-opacity: 0.75;
+}
+.bg-opacity-80 {
+  --bg-opacity: 0.8;
+}
+.bg-opacity-90 {
+  --bg-opacity: 0.9;
+}
+.bg-opacity-95 {
+  --bg-opacity: 0.95;
+}
+.bg-opacity-100 {
+  --bg-opacity: 1;
+}
+
+/*------------------------------------- temp move from here--------------- */
+/* fill svg */
 .fill-white {
   fill: var(--white-color1);
 }
@@ -134,6 +680,7 @@
   margin-left: auto;
 }
 /* padding */
+
 .pt-3 {
   padding-top: 0.75rem;
 }
@@ -181,310 +728,6 @@
 .h-64 {
   height: 16rem;
 }
-
-/* breakpoints */
-
-/* container */
-.container {
-}
-.container-xs {
-  max-width: 275px;
-}
-.container-xs0 {
-  max-width: 345px;
-  /* max-width: 380px; */
-}
-.container-sm {
-  max-width: 640px;
-}
-.container-md {
-  max-width: 768px;
-}
-.container-lg {
-  max-width: 1024px;
-}
-.container-xl {
-  max-width: 1280px;
-}
-.container-2xl {
-  max-width: 1536px;
-}
-
-/* box sizing */
-.box-border {
-  box-sizing: border-box;
-}
-.box-content {
-  box-sizing: content-box;
-}
-
-/* display */
-.hidden {
-  display: none;
-}
-.block {
-  display: block;
-}
-.inline-block {
-  display: inline-block;
-}
-.inline {
-  display: inline;
-}
-.flex {
-  display: flex;
-}
-.inline-flex {
-  display: inline-flex;
-}
-
-/* table */
-/* todo inlcude table if need be */
-
-/* float */
-.float-right {
-  float: right;
-}
-.float-left {
-  float: left;
-}
-.float-none {
-  float: none;
-}
-
-/* clear */
-.clear-left {
-  clear: left;
-}
-.clear-right {
-  clear: right;
-}
-.clear-both {
-  clear: both;
-}
-.clear-none {
-  clear: none;
-}
-
-/* object-fit */
-.object-contain {
-  object-fit: contain;
-}
-.object-cover {
-  object-fit: cover;
-}
-.object-fill {
-  object-fit: fill;
-}
-.object-none {
-  object-fit: none;
-}
-.object-scale-down {
-  object-fit: scale-down;
-}
-
-/* object-position */
-/* todo */
-
-/* overflow */
-.overflow-auto {
-  overflow: auto;
-}
-.overflow-hidden {
-  overflow: hidden;
-}
-.overflow-visible {
-  overflow: visible;
-}
-.overflow-scroll {
-  overflow: scroll;
-}
-.overflow-x-auto {
-  overflow-x: auto;
-}
-.overflow-y-auto {
-  overflow-y: auto;
-}
-.overflow-x-hidden {
-  overflow-x: hidden;
-}
-.overflow-y-hidden {
-  overflow-y: hidden;
-}
-.overflow-x-visible {
-  overflow-x: visible;
-}
-.overflow-y-visible {
-  overflow-y: visible;
-}
-.overflow-x-scroll {
-  overflow-x: scroll;
-}
-.overflow-y-scroll {
-  overflow-y: scroll;
-}
-
-/* overscroll */
-/* todo */
-
-/* position */
-.static {
-  position: static;
-}
-.fixed {
-  position: fixed;
-}
-.absolute {
-  position: absolute;
-}
-.relative {
-  position: relative;
-}
-.stickt {
-  position: sticky;
-}
-
-/* top right bottom left */
-/* todo */
-
-/* visibility */
-.visible {
-  visibility: visible;
-}
-.invisible {
-  visibility: hidden;
-}
-
-/* zindex */
-.z-0 {
-  z-index: 0;
-}
-.z-10 {
-  z-index: 10;
-}
-.z-20 {
-  z-index: 20;
-}
-.z-30 {
-  z-index: 30;
-}
-.z-40 {
-  z-index: 40;
-}
-.z-50 {
-  z-index: 50;
-}
-.z-auto {
-  z-index: auto;
-}
-
-/* ------------------------------flexbox--------------------------------- */
-/* display */
-/* .flex {
-  display: flex;
-}
-.inline-flex {
-  display: inline-flex;
-} */
-
-/* flex-direction */
-.flex-row {
-  flex-direction: row;
-}
-.flex-row-reverse {
-  flex-direction: row-reverse;
-}
-.flex-col {
-  flex-direction: column;
-}
-.flex-col-reverse {
-  flex-direction: column-reverse;
-}
-
-/* flex-wrap */
-.flex-wrap {
-  flex-wrap: wrap;
-}
-.flex-wrap {
-  flex-wrap: wrap-reverse;
-}
-.flex-nowrap {
-  flex-wrap: nowrap;
-}
-
-/* flex */
-.flex-1 {
-  flex: 1 1 0%;
-}
-.flex-auto {
-  flex: 1 1 auto;
-}
-.flex-initial {
-  flex: 0 1 auto;
-}
-.flex-none {
-  flex: none;
-}
-
-/* flex-grow */
-.flex-grow {
-  flex-grow: 1;
-}
-.flex-grow-0 {
-  flex-grow: 0;
-}
-
-/* flex-shrink */
-.flex-shrink {
-  flex-shrink: 1;
-}
-.flex-shrink-0 {
-  flex-shrink: 0;
-}
-
-/* order */
-.order-1 {
-  order: 1;
-}
-.order-2 {
-  order: 2;
-}
-.order-3 {
-  order: 3;
-}
-.order-4 {
-  order: 4;
-}
-.order-5 {
-  order: 5;
-}
-.order-6 {
-  order: 6;
-}
-.order-7 {
-  order: 7;
-}
-.order-8 {
-  order: 8;
-}
-.order-9 {
-  order: 9;
-}
-.order-10 {
-  order: 10;
-}
-.order-11 {
-  order: 11;
-}
-.order-12 {
-  order: 12;
-}
-
-/* ------------------------------------------------grid------------------------------------- */
-/* todo */
-
-/* -------------------------------------------box-alignment--------------------------------- */
-
 /* --------------------------------------spacing------------------------------------------- */
 .p-0 {
   padding: 0px;
@@ -524,55 +767,4 @@
 }
 .p-12 {
   padding: 3rem;
-}
-.p-14 {
-  padding: 3.5rem;
-}
-.p-16 {
-  padding: 4rem;
-}
-.p-20 {
-  padding: 5rem;
-}
-.p-24 {
-  padding: 6rem;
-}
-.p-28 {
-  padding: 7rem;
-}
-.p-32 {
-  padding: 8rem;
-}
-.p-36 {
-  padding: 9rem;
-}
-.p-40 {
-  padding: 10rem;
-}
-.p-44 {
-  padding: 11rem;
-}
-.p-48 {
-  padding: 12rem;
-}
-.p-52 {
-  padding: 13rem;
-}
-.p-56 {
-  padding: 14rem;
-}
-.p-60 {
-  padding: 15rem;
-}
-.p-64 {
-  padding: 16rem;
-}
-.p-72 {
-  padding: 18rem;
-}
-.p-80 {
-  padding: 20rem;
-}
-.p-96 {
-  padding: 24rem;
 }
