--- a/src/css/card.css
+++ b/src/css/card.css
@@ -12,14 +12,23 @@
   border-radius: 0;
 }
 .card__content {
+  /* padding: 0.5em; */
   padding: 1em;
+  /* margin: 0.5em; */
 }
+/* .card__content > * {
+  padding: 0.5em;
+} */
 .card__header {
   display: flex;
-  align-items: center;
+  /* align-items: center; */
   /* margin-bottom: 0.6em; */
-  padding: 0.5em;
+  /* padding: 0.5em; */
+  padding: 1em;
 }
+/* .card__header > * {
+  margin: 0.5em;
+} */
 .card__title {
   /* padding: 0.5rem; */
 }
@@ -80,4 +89,8 @@
   width: 100%;
   object-fit: cover;
   /* object-position: 0 0; */
+}
+.card__content > .card__header,
+.card__content > .card__footer {
+  padding: 0;
 }
