--- a/src/css/input.css
+++ b/src/css/input.css
@@ -1,10 +1,3 @@
-:root {
-  --pure-material-primary-rgb: 33, 150, 243;
-  --pure-material-onprimary-rgb: 255, 255, 255;
-  --pure-material-surface-rgb: 255, 255, 255;
-  --pure-material-onsurface-rgb: 0, 0, 0;
-}
-
 /* input container */
 .input-checkbox {
   z-index: 0;
@@ -312,13 +305,14 @@
   /* left: -2px; */
   right: 12px;
   /* top: -8px; */
-  top: 1px;
+  top: -1px;
   display: block;
   margin: 0;
   border-radius: 50%;
-  width: 32px;
-  height: 32px;
-  background-color: rgba(0, 0, 0, 0.38);
+  width: 36px;
+  height: 36px;
+  /* background-color: rgba(0, 0, 0, 0.38); */
+  background-color: rgba(128, 128, 128, 0.38);
   outline: none;
   opacity: 0;
   transform: scale(1);
@@ -371,7 +365,7 @@
 /* Checked */
 .input-toggle > input:checked {
   /* right: -10px; */
-  right: -4px;
+  right: -7px;
   /* background-color: rgb(33, 150, 243); */
   /* background-color: rgb(5, 5, 5); */
   background-color: rgb(128, 128, 128, 0.7);
@@ -450,12 +444,14 @@
 .input-text input {
   color: #fff;
   background-color: #292f3a;
+  /* background-color: rgba(17, 24, 39); */
   width: 100%;
   letter-spacing: 1px;
   border: 0;
   /* padding: 7px 4px; */
   padding: 0.6rem 0.6rem;
-  border-bottom: 1px solid #000;
+  /* border-bottom: 1px solid #000; */
+  border-bottom: 1px solid rgba(75, 85, 99);
 }
 .input-text--light input {
   background-color: #fff;
@@ -488,7 +484,8 @@
   color: #fff;
   width: 100%;
   letter-spacing: 1px;
-  border: 1px solid #ccc;
+  /* border: 1px solid #ccc; */
+  border: 1px solid rgba(156, 163, 175);
   padding: 0.6rem 0.8rem;
   /* border: 1px solid #ccc; */
   position: relative;
@@ -496,16 +493,20 @@
 }
 .input-text--bcg.input-text--light input {
   color: #000;
-  border-color: #000;
+  /* border-color: #000; */
 }
 
 .input-text--bcg input:focus {
   transition: 0.5s;
   /* opacity: 1; */
-  background-color: rgba(204, 204, 204, 0.1);
+  /* background-color: rgba(204, 204, 204, 0.1); */
+  background-color: rgba(17, 24, 39);
+  border-color: rgba(249, 250, 251);
 }
 .input-text--bcg.input-text--light input:focus {
-  background-color: rgba(0, 0, 0, 0.05);
+  /* background-color: rgba(0, 0, 0, 0.05); */
+  background-color: rgba(229, 231, 235);
+  border-color: rgba(17, 24, 39);
 }
 /* icon input */
 .input-text__icon {
