--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,4 +1,3 @@
-@import url("./utility.css");
 @import url("./avatar.css");
 @import url("./alert.css");
 @import url("./badge.css");
@@ -6,6 +5,8 @@
 @import url("./card.css");
 @import url("./input.css");
 @import url("./typography.css");
+@import url("./utility.css");
+
 /* border box */
 html {
   box-sizing: border-box;
@@ -37,4 +38,139 @@ html {
   background-color: var(--black-color1);
   /* background-color: var(--white-color1); */
   color: var(--white-color1);
+}
+
+/*------------------------------------- temp move from here--------------- */
+/* fill svg */
+.fill-white {
+  fill: var(--white-color1);
+}
+.fill-black {
+  fill: var(--black-color1);
+}
+
+/* margin */
+.mr-6 {
+  margin-right: 1.5rem;
+}
+.mr-5 {
+  margin-right: 1.25rem;
+}
+.mr-4 {
+  margin-right: 1rem;
+}
+.mr-3 {
+  margin-right: 0.75rem;
+}
+.mr-2 {
+  margin-right: 0.5rem;
+}
+.mb-4 {
+  margin-bottom: 1rem;
+}
+.mb-3 {
+  margin-bottom: 0.75rem;
+}
+.mb-2 {
+  margin-bottom: 0.5rem;
+}
+.ml-auto {
+  margin-left: auto;
+}
+/* padding */
+
+.pt-3 {
+  padding-top: 0.75rem;
+}
+.pt-4 {
+  padding-top: 1rem;
+}
+.pb-4 {
+  padding-bottom: 1rem;
+}
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+.pl-4 {
+  padding-left: 1rem;
+}
+.pl-8 {
+  padding-left: 2rem;
+}
+/* border */
+.border-top {
+  border-top: 1px solid rgba(189, 185, 185, 0.589);
+}
+.border-bottom {
+  border-bottom: 1px solid rgba(189, 185, 185, 0.589);
+}
+/* width */
+[class*="w-1/2"] {
+  width: 50%;
+}
+[class*="w-1/3"] {
+  width: 33.333333%;
+}
+[class*="w-2/3"] {
+  width: 66.666666%;
+}
+.w-full {
+  width: 100%;
+}
+
+/* height */
+.h-28 {
+  height: 7rem;
+}
+.h-64 {
+  height: 16rem;
+}
+/* --------------------------------------spacing------------------------------------------- */
+.p-0 {
+  padding: 0px;
+}
+.p-1 {
+  padding: 0.25rem;
+}
+.p-2 {
+  padding: 0.5rem;
+}
+.p-3 {
+  padding: 0.75rem;
+}
+.p-4 {
+  padding: 1rem;
+}
+.p-5 {
+  padding: 1.25rem;
+}
+.p-6 {
+  padding: 1.5rem;
+}
+.p-7 {
+  padding: 1.75rem;
+}
+.p-8 {
+  padding: 2rem;
+}
+.p-9 {
+  padding: 2.25rem;
+}
+.p-10 {
+  padding: 2.5rem;
+}
+.p-11 {
+  padding: 2.75rem;
+}
+.p-12 {
+  padding: 3rem;
 }
