--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,11 +1,8 @@
-@import url("./avatar.css");
-@import url("./alert.css");
-@import url("./badge.css");
-@import url("./button.css");
-@import url("./card.css");
-@import url("./input.css");
-@import url("./typography.css");
-@import url("./utility.css");
+:root {
+  --header-height: 80px;
+  --sidebar-width: 18%;
+  --primary-color: #3e6eff;
+}
 
 /* border box */
 html {
@@ -19,7 +16,6 @@ html {
 
 body {
   margin: 0;
-  /* font: 16px/1.7 "Source Sans Pro", Helvetica, Helvetica Neue, Arial, sans-serif; */
   font: 16px/1.7 "Inter", sans-serif;
   /* color: var(--white-color1); */
   /* background-color: var(--bg-color); */
@@ -32,21 +28,11 @@ html {
 }
 
 .App {
-  padding: 2rem;
   width: 100%;
   min-height: 100vh;
-  background-color: var(--black-color1);
-  /* background-color: var(--white-color1); */
+  /* background-color: var(--black-color1); */
+  background-color: var(--white-color1);
   color: var(--white-color1);
-}
-
-/*------------------------------------- temp move from here--------------- */
-/* fill svg */
-.fill-white {
-  fill: var(--white-color1);
-}
-.fill-black {
-  fill: var(--black-color1);
 }
 
 /* margin */
