--- a/src/css/style.css
+++ b/src/css/style.css
@@ -29,10 +29,15 @@ html {
 
 .App {
   width: 100%;
-  min-height: 100vh;
-  background-color: var(--black-color1);
+  height: 100vh;
+  /* background-color: var(--black-color1); */
   /* background-color: var(--white-color1); */
   color: var(--white-color1);
+}
+.main-content-wrapper {
+  display: flex;
+  width: 100%;
+  height: calc(100vh - var(--header-height));
 }
 
 /* margin */
@@ -161,6 +166,6 @@ html {
   padding: 3rem;
 }
 
-.border-color-white {
+.badge-dot.border-color-white {
   border-color: #fff;
 }
