--- a/src/css/button.css
+++ b/src/css/button.css
@@ -39,10 +39,28 @@
   /* background-color: #d5d5d5; */
 }
 .btn:active {
-  transform: scale(0.99);
+  /* transform: scale(0.99999); */
   box-shadow: 5px 5px -3px 4px rgba(0, 0, 0, 0.2),
     0px 8px 10px 1px rgba(0, 0, 0, 0.14), 0px 3px 14px 2px rgba(0, 0, 0, 0.12);
 }
+
+.btn::before {
+  content: "";
+  width: 100%;
+  height: 120%;
+  background-color: rgba(252, 252, 252, 0.1);
+  position: absolute;
+  border-radius: 50%;
+  transform: scale(1);
+  opacity: 0;
+  transition: opacity 0.3s, transform 0.2s;
+}
+.btn:active::before {
+  opacity: 0.9;
+  transform: scale(0);
+  transition: transform 0s, opacity 0s;
+}
+
 .btn--sm {
   font-size: 0.875rem;
   height: 42px;
