--- a/src/css/component.css
+++ b/src/css/component.css
@@ -8,7 +8,7 @@
 .component-wrapper {
   /* background-color: #f9f9f9; */
   flex-grow: 1;
-  padding: 2.5rem 0;
+  padding: 3rem 0;
   padding-right: 2.5rem;
   max-width: calc(100% - var(--sidebar-width));
 }
@@ -62,12 +62,14 @@
 
 /* variants */
 .component-variant-wrapper {
-  padding-bottom: 3.25rem;
+  padding-bottom: 4.25rem;
   /* margin-bottom: 3rem; */
   margin-bottom: 3.25rem;
   border-bottom: 1px solid rgba(128, 128, 128, 0.2);
 }
 .component-variant-header {
+  /* margin-top: 0.5rem; */
+  padding-top: 1rem;
   font-size: 2rem;
   line-height: 1;
   font-weight: 600;
@@ -105,5 +107,27 @@ pre[class*="language-"] {
   position: absolute;
   bottom: -3.75rem;
   right: 1rem;
-  /* color: #cce3ec; */
+}
+.copy-btn.btn:hover {
+  background-color: rgba(128, 128, 128, 0.1);
+}
+.copy-btn::before {
+  content: "";
+  width: 100%;
+  height: 100%;
+  /* width: 32px;
+  height: 32px; */
+  position: absolute;
+  background-color: var(--primary-color);
+  /* background-color: red; */
+  border-radius: 50%;
+  transform: scale(1);
+  opacity: 0;
+  transition: opacity 0.3s, transform 0.2s;
+}
+.copy-btn:active::before {
+  /* background-color: transparent; */
+  opacity: 0.8;
+  transform: scale(0);
+  transition: transform 0s, opacity 0s;
 }
