--- a/src/css/css-lib/alert.css
+++ b/src/css/css-lib/alert.css
@@ -1,3 +1,7 @@
+:root {
+  --error-color: rgb(250, 179, 174);
+}
+
 .alert {
   padding: 1rem;
   font-size: 0.875rem;
@@ -7,7 +11,6 @@
   display: flex;
   align-items: center;
   position: relative;
-  /* test */
   background-color: rgb(9, 9, 9);
   color: white;
 }
@@ -43,10 +46,10 @@
   fill: #4caf50;
 }
 .alert--rounded {
-  border-radius: 4px;
+  border-radius: 0.25rem;
 }
 .alert--rounded-full {
-  border-radius: 12px;
+  border-radius: 0.75rem;
 }
 .alert__msg {
   display: flex;
@@ -60,17 +63,19 @@
   margin-bottom: 0.35em;
 }
 .alert__icon {
-  font-size: 22px;
+  /* font-size: 22px; */
+  font-size: 1.375rem;
   opacity: 0.9;
-  padding: 4px 0;
-  margin-right: 12px;
+  /* padding: 4px 0; */
+  padding: 0.25rem 0;
+  /* margin-right: 12px; */
+  margin-right: 0.75rem;
   display: flex;
   justify-content: center;
   align-items: center;
   align-self: flex-start;
 }
 .alert__icon > svg {
-  /* fill: currentColor; */
   width: 1em;
   height: 1em;
   flex-shrink: 0;
@@ -97,7 +102,8 @@
   border: 1px solid transparent;
   font-weight: 500;
   line-height: 1.75;
-  border-radius: 4px;
+  /* border-radius: 4px; */
+  border-radius: 0.25rem;
   letter-spacing: 0.02em;
   text-transform: uppercase;
   cursor: pointer;
@@ -109,13 +115,28 @@
   justify-content: center;
   text-decoration: none;
   font-size: 0.9rem;
-  padding: 6px 8px;
+  padding: 0.375rem 0.5rem;
 }
+.alert__actions button::before {
+  content: "";
+  width: 100%;
+  height: 120%;
+  background-color: rgba(128, 128, 128, 0.25);
+  position: absolute;
+  border-radius: 50%;
+  transform: scale(1);
+  opacity: 0;
+  transition: opacity 0.3s, transform 0.2s;
+}
+.alert__actions button:active::before {
+  opacity: 0.9;
+  transform: scale(0);
+  transition: transform 0s, opacity 0s;
+}
+
 .alert__actions button:hover {
-  /* background-color: rgba(255, 255, 255, 0.1); */
   background-color: rgba(128, 128, 128, 0.2);
 }
-/*!------------------------------------- add active class-------------------------- */
 .alert__actions svg {
   fill: currentColor;
   width: 1.325em;
@@ -157,7 +178,6 @@
 }
 .alert--error.alert--outline {
   border: 1px solid #f44336;
-  /* color: rgb(219, 156, 152); */
   color: #b8473f;
 }
 .alert--warning.alert--outline {
