--- a/src/css/css-lib/badge.css
+++ b/src/css/css-lib/badge.css
@@ -1,52 +1,45 @@
 .badge-wrapper {
   position: relative;
-  /* display: inline-block; */
   display: inline-flex;
 }
 .badge {
   position: absolute;
   top: 0;
   right: 0;
-  border-radius: 10px;
+  border-radius: 0.625rem;
   display: flex;
   justify-content: center;
   align-items: center;
-  min-width: 20px;
-  /* max-width: 28px; */
+  min-width: 1.25rem;
   width: auto;
-  height: 20px;
-  /* background-color: red; */
-  /* transform: scale(1) translate(50%, -50%); */
+  height: 1.25rem;
   transform: scale(1) translate(40%, -40%);
   transform-origin: 100% 0%;
   font-size: 0.75rem;
-  padding: 0 6px;
+  padding: 0 0.375rem;
   line-height: 1;
   font-weight: 600;
 }
 .badge--sm {
-  min-width: 16px;
-  height: 16px;
-  /* padding: 4px; */
+  min-width: 1rem;
+  height: 1rem;
   font-size: 0.6rem;
 }
 .badge--md {
-  min-width: 20px;
-  height: 20px;
-  /* padding: 6px; */
+  min-width: 1.25rem;
+  height: 1.25rem;
   font-size: 0.75rem;
 }
 .badge--lg {
-  min-width: 24px;
-  height: 24px;
-  /* padding: 8px; */
+  min-width: 1.5rem;
+  height: 1.5rem;
   font-size: 0.9rem;
 }
 
 .badge-dot {
-  width: 16px;
-  min-width: 16px;
-  height: 16px;
+  width: 1rem;
+  min-width: 1rem;
+  height: 1rem;
   border: 3px solid var(--black-color1);
   border-radius: 50%;
   position: absolute;
@@ -54,31 +47,25 @@
   right: 0;
   transform: scale(1) translate(30%, -30%);
   transform-origin: 100% 0%;
-  border-radius: 10px;
+  border-radius: 0.625rem;
   display: flex;
   justify-content: center;
   align-items: center;
   /* todo: make this border dynamic */
 }
 .badge-dot.badge-dot--sm {
-  width: 12px;
-  min-width: 12px;
-  height: 12px;
+  width: 0.75rem;
+  min-width: 0.75rem;
+  height: 0.75rem;
 }
 .badge-dot.badge-dot--lg {
-  width: 20px;
-  min-width: 20px;
-  height: 20px;
-  /* min-width: 16px;
-  max-width: 16px;
-  min-height: 16px;
-  max-height: 16px; */
+  width: 1.25rem;
+  min-width: 1.25rem;
+  height: 1.25rem;
 }
 
 .badge-wrapper .badge--bottom {
-  /* transform: scale(1) translate(40%, 100%); */
   top: 100%;
   transform: scale(1) translate(30%, -70%);
   transform-origin: 100% 0%;
-  /* bottom: 0; */
 }
