--- a/src/css/css-lib/input.css
+++ b/src/css/css-lib/input.css
@@ -4,7 +4,7 @@
   position: relative;
   display: inline-block;
   color: rgba(255, 255, 255, 0.87);
-  font-size: 16px;
+  font-size: 1rem;
   line-height: 1.5;
 }
 
@@ -15,13 +15,13 @@
   -webkit-appearance: none;
   z-index: -1;
   position: absolute;
-  left: -10px;
-  top: -8px;
+  left: -0.625rem;
+  top: -0.5rem;
   display: block;
   margin: 0;
   border-radius: 50%;
-  width: 40px;
-  height: 40px;
+  width: 2.5rem;
+  height: 2.5rem;
   background-color: rgba(0, 0, 0, 0.6);
   box-shadow: none;
   outline: none;
@@ -43,14 +43,12 @@
   content: "";
   display: inline-block;
   box-sizing: border-box;
-  margin: 3px 11px 3px 1px;
-  border: solid 2px; /* Safari */
-  /* border-color: rgba(0, 0, 0, 0.6); */
+  margin: 0.188rem 0.688rem 0.188rem 0.063rem;
+  border: solid 2px;
   border-color: #3d424e;
-  /* background-color: #323741; */
-  border-radius: 2px;
-  width: 18px;
-  height: 18px;
+  border-radius: 0.125rem;
+  width: 1.125rem;
+  height: 1.125rem;
   vertical-align: top;
   transition: border-color 0.2s, background-color 0.2s;
 }
@@ -60,42 +58,36 @@
   content: "";
   display: block;
   position: absolute;
-  top: 4px;
-  left: 2px;
-  width: 10px;
-  height: 5px;
+  top: 0.25rem;
+  left: 0.125rem;
+  width: 0.625rem;
+  height: 0.313rem;
   border: solid 2px transparent;
   border-right: none;
   border-top: none;
-  transform: translate(3px, 4px) rotate(-45deg);
+  transform: translate(0.188rem, 0.25rem) rotate(-45deg);
 }
 
 /* Checked, Indeterminate */
 .input-checkbox > input:checked,
 .input-checkbox > input:indeterminate {
-  /* background-color: rgb(33, 150, 243); */
   background-color: rgb(5, 5, 5);
 }
 
 .input-checkbox > input:checked + span::before,
 .input-checkbox > input:indeterminate + span::before {
-  /* border-color: rgb(33, 150, 243); */
-  /* border-color: rgb(5, 5, 5); */
-  /* background-color: rgb(33, 150, 243); */
   border: 1px solid #3d424e;
-  /* border-color: rgb(255, 255, 255); */
   background-color: rgb(255, 255, 255);
 }
 
 .input-checkbox > input:checked + span::after,
 .input-checkbox > input:indeterminate + span::after {
-  /* border-color: rgb(255, 255, 255); */
   border-color: rgb(0, 0, 0);
 }
 
 .input-checkbox > input:indeterminate + span::after {
   border-left: none;
-  transform: translate(4px, 3px);
+  transform: translate(0.25rem, 0.188rem);
 }
 
 /* Hover, Focus */
@@ -119,7 +111,6 @@
 }
 
 .input-checkbox > input:active + span::before {
-  /* border-color: rgb(33, 150, 243); */
   border-color: rgb(5, 5, 5);
 }
 
@@ -154,7 +145,7 @@
   position: relative;
   display: inline-block;
   color: rgba(255, 255, 255, 0.87);
-  font-size: 16px;
+  font-size: 1rem;
   line-height: 1.5;
 }
 .input-radio.radio--light {
@@ -168,13 +159,13 @@
   -webkit-appearance: none;
   z-index: -1;
   position: absolute;
-  left: -10px;
-  top: -8px;
+  left: -0.625rem;
+  top: -0.5rem;
   display: block;
   margin: 0;
   border-radius: 50%;
-  width: 40px;
-  height: 40px;
+  width: 2.5rem;
+  height: 2.5rem;
   background-color: rgba(0, 0, 0, 0.6);
   outline: none;
   opacity: 0;
@@ -195,13 +186,12 @@
   content: "";
   display: inline-block;
   box-sizing: border-box;
-  margin: 2px 10px 2px 0;
-  border: solid 2px; /* Safari */
-  /* border-color: rgba(0, 0, 0, 0.6); */
+  margin: 0.125rem 0.625rem 0.125rem 0;
+  border: solid 2px;
   border-color: #3d424e;
   border-radius: 50%;
-  width: 20px;
-  height: 20px;
+  width: 1.25rem;
+  height: 1.25rem;
   vertical-align: top;
   transition: border-color 0.2s;
 }
@@ -211,15 +201,13 @@
   content: "";
   display: block;
   position: absolute;
-  top: 2px;
+  top: 0.125rem;
   left: 0;
   border-radius: 50%;
-  width: 10px;
-  height: 10px;
-  /* background-color: rgb(33, 150, 243); */
+  width: 0.625rem;
+  height: 0.625rem;
   background-color: white;
-  /* background-color: black; */
-  transform: translate(5px, 5px) scale(0);
+  transform: translate(0.313rem, 0.313rem) scale(0);
   transition: transform 0.2s;
 }
 .radio--light > span::after {
@@ -228,13 +216,7 @@
 
 /* Checked */
 .input-radio > input:checked {
-  /* background-color: rgb(33, 150, 243); */
   background-color: rgb(5, 5, 5);
-}
-
-.input-radio > input:checked + span::before {
-  /* border-color: rgb(33, 150, 243); */
-  /* border-color: ; */
 }
 
 .input-radio > input:checked + span::after {
@@ -261,10 +243,6 @@
   transition: transform 0s, opacity 0s;
 }
 
-.input-radio > input:active + span::before {
-  /* border-color: rgb(33, 150, 243); */
-}
-
 /* Disabled */
 .input-radio > input:disabled {
   opacity: 0;
@@ -289,7 +267,7 @@
   position: relative;
   display: inline-block;
   color: rgba(255, 255, 255, 0.87);
-  font-size: 16px;
+  font-size: 1rem;
   line-height: 1.5;
 }
 
@@ -300,18 +278,13 @@
   -webkit-appearance: none;
   z-index: -1;
   position: absolute;
-  /* right: 6px; */
-  /* right: 3px; */
-  /* left: -2px; */
-  right: 12px;
-  /* top: -8px; */
-  top: -1px;
+  right: 0.75rem;
+  top: -0.063rem;
   display: block;
   margin: 0;
   border-radius: 50%;
-  width: 36px;
-  height: 36px;
-  /* background-color: rgba(0, 0, 0, 0.38); */
+  width: 2.25rem;
+  height: 2.25rem;
   background-color: rgba(128, 128, 128, 0.38);
   outline: none;
   opacity: 0;
@@ -332,13 +305,10 @@
   content: "";
   float: right;
   display: inline-block;
-  margin: 5px 0 5px 10px;
-  border-radius: 14px;
-  /* width: 36px; */
-  width: 42px;
-  /* height: 14px; */
-  height: 24px;
-  /* background-color: rgba(0, 0, 0, 0.38); */
+  margin: 0.313rem 0 0.313rem 0.625rem;
+  border-radius: 0.875rem;
+  width: 2.625rem;
+  height: 1.5rem;
   background-color: #3d424e;
   vertical-align: top;
   transition: background-color 0.2s, opacity 0.2s;
@@ -348,14 +318,11 @@
 .input-toggle > span::after {
   content: "";
   position: absolute;
-  top: 9px;
-  /* right: 16px; */
-  right: 21px;
+  top: 0.563rem;
+  right: 1.313rem;
   border-radius: 50%;
-  width: 16px;
-  height: 16px;
-  /* width: 20px;
-  height: 20px; */
+  width: 1rem;
+  height: 1rem;
   background-color: rgb(255, 255, 255, 0.6);
   box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 2px 2px 0 rgba(0, 0, 0, 0.14),
     0 1px 5px 0 rgba(0, 0, 0, 0.12);
@@ -364,24 +331,17 @@
 
 /* Checked */
 .input-toggle > input:checked {
-  /* right: -10px; */
-  right: -7px;
-  /* background-color: rgb(33, 150, 243); */
-  /* background-color: rgb(5, 5, 5); */
+  right: -0.438rem;
   background-color: rgb(128, 128, 128, 0.7);
 }
 
 .input-toggle > input:checked + span::before {
-  /* background-color: rgba(33, 150, 243, 0.6); */
-  /* background-color: rgb(255, 255, 255, 0.6); */
   background-color: #505766;
 }
 
 .input-toggle > input:checked + span::after {
-  /* background-color: rgb(33, 150, 243); */
-  /* background-color: rgb(0, 0, 0); */
   background-color: rgb(255, 255, 255);
-  transform: translateX(16px);
+  transform: translateX(1rem);
 }
 
 /* Hover, Focus */
@@ -405,13 +365,10 @@
 }
 
 .input-toggle > input:active + span::before {
-  /* background-color: rgba(33, 150, 243, 0.6); */
-  /* background-color: rgb(255, 255, 255, 0.6); */
   background-color: #505766;
 }
 
 .input-toggle > input:checked:active + span::before {
-  /* background-color: rgba(0, 0, 0, 0.38); */
   background-color: #505766;
 }
 
@@ -427,13 +384,7 @@
 }
 
 .input-toggle > input:disabled + span::before {
-  /* background-color: rgba(0, 0, 0, 0.38); */
   background-color: #505766;
-}
-
-.input-toggle > input:checked:disabled + span::before {
-  /* background-color: rgba(33, 150, 243, 0.6); */
-  /* background-color: rgb(255, 255, 255, 0.6); */
 }
 
 /* ---------------------text------------------------ */
@@ -444,13 +395,10 @@
 .input-text input {
   color: #fff;
   background-color: #292f3a;
-  /* background-color: rgba(17, 24, 39); */
   width: 100%;
-  letter-spacing: 1px;
+  letter-spacing: 0.063rem;
   border: 0;
-  /* padding: 7px 4px; */
   padding: 0.6rem 0.6rem;
-  /* border-bottom: 1px solid #000; */
   border-bottom: 1px solid rgba(75, 85, 99);
 }
 .input-text--light input {
@@ -466,7 +414,7 @@
   bottom: 0;
   left: 0;
   width: 0;
-  height: 2px;
+  height: 0.125rem;
   background-color: #fff;
   transition: 0.4s;
 }
@@ -483,28 +431,22 @@
 .input-text--bcg input {
   color: #fff;
   width: 100%;
-  letter-spacing: 1px;
-  /* border: 1px solid #ccc; */
+  letter-spacing: 0.063rem;
   border: 1px solid rgba(156, 163, 175);
   padding: 0.6rem 0.8rem;
-  /* border: 1px solid #ccc; */
   position: relative;
   background-color: transparent;
 }
 .input-text--bcg.input-text--light input {
   color: #000;
-  /* border-color: #000; */
 }
 
 .input-text--bcg input:focus {
   transition: 0.5s;
-  /* opacity: 1; */
-  /* background-color: rgba(204, 204, 204, 0.1); */
   background-color: rgba(17, 24, 39);
   border-color: rgba(249, 250, 251);
 }
 .input-text--bcg.input-text--light input:focus {
-  /* background-color: rgba(0, 0, 0, 0.05); */
   background-color: rgba(229, 231, 235);
   border-color: rgba(17, 24, 39);
 }
@@ -514,5 +456,5 @@
   top: 50%;
   left: 0.6rem;
   transform: translate(0, -50%);
-  width: 24px;
+  width: 1.5rem;
 }
