--- a/src/css/pars.css
+++ b/src/css/pars.css
@@ -1,8 +1,8 @@
-@import url("./avatar.css");
-@import url("./alert.css");
-@import url("./badge.css");
-@import url("./button.css");
-@import url("./card.css");
-@import url("./input.css");
-@import url("./typography.css");
-@import url("./utility.css");
+@import url("./css-lib/button.css");
+@import url("./css-lib/avatar.css");
+@import url("./css-lib/alert.css");
+@import url("./css-lib/badge.css");
+@import url("./css-lib/card.css");
+@import url("./css-lib/input.css");
+@import url("./css-lib/typography.css");
+@import url("./css-lib/utility.css");
