--- a/src/css/style.css
+++ b/src/css/style.css
@@ -17,8 +17,6 @@ html {
 body {
   margin: 0;
   font: 16px/1.7 "Inter", sans-serif;
-  /* color: var(--white-color1); */
-  /* background-color: var(--bg-color); */
 }
 *,
 body,
@@ -27,19 +25,377 @@ html {
   padding: 0;
 }
 
+/* ----------------------app-------------------------- */
 .App {
   width: 100%;
   height: 100vh;
-  /* background-color: var(--black-color1); */
-  /* background-color: var(--white-color1); */
   color: var(--white-color1);
 }
+/* ----------------------header------------------------ */
+header {
+  height: var(--header-height);
+  position: relative;
+  border-bottom: 1px solid rgba(209, 213, 219);
+}
+
+.theme-toggle .toggle-icon::after {
+  background-color: var(--bg);
+}
+.theme-toggle > input:checked + span::after {
+  background-color: var(--bg);
+}
+
+.logo {
+  width: var(--sidebar-width);
+  cursor: pointer;
+  padding: 0 3.25rem;
+}
+.logo__icon {
+  fill: #3e6eff;
+}
+.logo__text {
+  letter-spacing: 1.25px;
+  font-weight: 700;
+  font-size: 1.25rem;
+  margin-left: 0.5rem;
+}
+.navigation {
+  flex-grow: 1;
+  height: 100%;
+  /* width: calc(100% - var(--sidebar-width)); */
+  max-width: calc(100% - var(--sidebar-width));
+}
+.header-btns {
+  width: var(--sidebar-width);
+  max-width: var(--sidebar-width);
+}
+.main-nav {
+  height: 100%;
+}
+.main-nav ul {
+  list-style: none;
+  display: flex;
+  height: 100%;
+}
+.main-nav__item {
+  font-weight: 600;
+  font-size: 1.15rem;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  position: relative;
+}
+.main-nav__item button {
+  border: none;
+  outline: none;
+  background-color: transparent;
+  cursor: pointer;
+  height: 100%;
+  font-weight: 600;
+  font-family: "Inter", sans-serif;
+  font-size: 1.15rem;
+  color: var(--text-color);
+}
+
+.main-nav__item + .main-nav__item {
+  margin-left: 2.75rem;
+}
+.active-main-nav > button {
+  color: var(--primary-color);
+}
+
+.main-nav__item::before {
+  content: "";
+  display: block;
+  position: absolute;
+  bottom: -0.125rem;
+  left: 0;
+  width: 100%;
+  height: 0.25rem;
+  border-radius: 0.125rem;
+  background-color: var(--primary-color);
+  transition: transform 0.3s ease;
+}
+
+.main-nav__item::before {
+  transform: scaleX(0);
+  transform-origin: bottom right;
+}
+
+.main-nav__item:hover::before {
+  transform: scaleX(1);
+  transform-origin: bottom left;
+}
+
+.active-main-nav::before {
+  transform: scaleX(1);
+}
+.main-nav__item button:focus {
+  color: var(--primary-color);
+}
+.main-nav__item button:active .main-nav__item::before {
+  transform-origin: bottom right;
+  transform: scale(0);
+}
+
+.search-bar-wrapper.input-text--light .focus-border {
+  bottom: -55%;
+  background-color: rgba(128, 128, 128, 0.3);
+  height: 0.188rem;
+}
+.search-bar-wrapper.input-text--light input {
+  border-bottom: none;
+  background-color: transparent;
+  font-size: 1rem;
+  font-weight: 600;
+  font-family: "Inter", sans-serif;
+  background-image: url("../images/search-gray.svg");
+  background-position: 0 50%;
+  background-repeat: no-repeat;
+  padding-left: 32px;
+}
+
+.github-btn > a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.github-btn:focus {
+  background-color: rgba(128, 128, 128, 0.3);
+}
+
+.theme-toggle {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 0.5rem;
+}
+
+/* -------------------------main-content------------------------ */
 .main-content-wrapper {
   display: flex;
   width: 100%;
   height: calc(100vh - var(--header-height));
 }
 
+/* -----------------------sidebar---------------------------- */
+.sidebar {
+  width: var(--sidebar-width);
+  padding: 3rem 2.5rem;
+  padding-right: 3.5rem;
+}
+.sidebar-header {
+  font-size: 1rem;
+  font-weight: 600;
+  letter-spacing: 0.078rem;
+  text-transform: uppercase;
+  line-height: 1.25rem;
+  margin-bottom: 2rem;
+  padding: 0 0.75rem;
+}
+.sidebar-nav__item {
+  list-style: none;
+  color: var(--text-light);
+  font-size: 0.975rem;
+  padding: 0.5rem 0.75rem;
+  border-radius: 0.2rem;
+  font-weight: 600;
+  cursor: pointer;
+}
+.sidebar-nav__item:hover {
+  background-color: var(--nav-hover);
+}
+.active-sidebar-nav {
+  background-color: var(--nav-hover);
+  color: var(--primary-color);
+  font-weight: 600;
+}
+
+/* ----------------------------component------------------------ */
+.main-content {
+  overflow: auto;
+  display: flex;
+  width: calc(100% - var(--sidebar-width));
+  position: relative;
+}
+
+.component-wrapper {
+  flex-grow: 1;
+  padding: 3rem 0;
+  padding-right: 2.5rem;
+  max-width: calc(100% - var(--sidebar-width));
+}
+
+.component-title {
+  font-size: 2.5rem;
+  line-height: 1;
+  font-weight: 600;
+  margin-bottom: 2rem;
+}
+.component-desc {
+  height: 3rem;
+}
+.component-desc {
+  font-size: 1.2rem;
+  font-weight: 500;
+}
+.component-info-wrapper {
+  padding-bottom: 3rem;
+  margin-bottom: 3rem;
+  border-bottom: 1px solid rgba(128, 128, 128, 0.2);
+}
+.component-intro-header {
+  padding-top: 1rem;
+  font-size: 2rem;
+  line-height: 1;
+  font-weight: 600;
+  margin-bottom: 2rem;
+}
+.component-intro-wrapper {
+  padding-bottom: 3rem;
+  margin-bottom: 3rem;
+  border-bottom: 1px solid rgba(128, 128, 128, 0.2);
+}
+.component-intro {
+  min-height: 3rem;
+}
+
+.highlight {
+  display: inline-flex;
+  background-color: var(--highlight-bcg);
+  border: 1px solid rgba(128, 128, 128, 0.2);
+  font-size: 1.1rem;
+  padding: 0 0.5rem;
+  border-radius: 0.2rem;
+  color: var(--primary-color);
+  margin: 0.2rem 0.2rem;
+}
+
+/* variants */
+.component-variant-wrapper {
+  padding-bottom: 4.25rem;
+  margin-bottom: 3.25rem;
+  border-bottom: 1px solid rgba(128, 128, 128, 0.2);
+}
+.component-variant-header {
+  padding-top: 1rem;
+  font-size: 2rem;
+  line-height: 1;
+  font-weight: 600;
+  margin-bottom: 2rem;
+}
+.component-variant-desc {
+  min-height: 3rem;
+  margin-bottom: 2.5rem;
+}
+.component-variant-example {
+  border: 1px solid rgba(128, 128, 128, 0.2);
+  border-radius: 0.4rem;
+}
+.component-variant-example__output {
+  width: 100%;
+  margin: 0 auto;
+  padding: 2rem;
+  border: 1px solid rgba(128, 128, 128, 0.2);
+  position: relative;
+}
+pre[class*="language-"] {
+  margin: 0;
+  border-radius: 0 0 0.4rem 0.4rem;
+  padding-bottom: 2.5rem;
+  background-color: var(--codeBcg);
+}
+
+.comp__eg > * {
+  margin: 1rem;
+}
+
+.copy-btn {
+  position: absolute;
+  bottom: -3.75rem;
+  right: 1rem;
+}
+.copy-btn.btn:hover {
+  background-color: rgba(128, 128, 128, 0.1);
+}
+.copy-btn::before {
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background-color: var(--primary-color);
+  border-radius: 50%;
+  transform: scale(1);
+  opacity: 0;
+  transition: opacity 0.3s, transform 0.2s;
+}
+.copy-btn:active::before {
+  opacity: 0.8;
+  transform: scale(0);
+  transition: transform 0s, opacity 0s;
+}
+
+/* direct link */
+.direct-link-wrapper {
+  position: relative;
+}
+.direct-link > a {
+  color: var(--primary-color);
+  font-size: 1.75rem;
+  text-decoration: none;
+  margin-left: 0.5rem;
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+
+.direct-link-wrapper:hover .direct-link > a {
+  opacity: 1;
+}
+
+/* ------------------------------right-sidebar------------------ */
+
+.right-sidebar {
+  width: var(--sidebar-width);
+  position: sticky;
+  top: 0;
+  left: calc(100%- var(--sidebar-width));
+  padding: 3rem 2.5rem;
+}
+.right-sidebar-header {
+  font-size: 1rem;
+  font-weight: 700;
+  letter-spacing: 1.25px;
+  line-height: 20px;
+  margin-bottom: 1rem;
+  padding: 0 0.75rem;
+  margin-left: auto;
+  margin-right: auto;
+}
+.right-sidebar-nav__item {
+  list-style: none;
+  font-size: 0.875rem;
+  color: var(--text-light);
+  padding: 0.1rem 0.75rem;
+  border-radius: 0.2rem;
+  cursor: pointer;
+
+  margin-left: auto;
+  margin-right: auto;
+}
+.right-sidebar-nav__item a {
+  text-decoration: none;
+  color: var(--text-light);
+}
+.right-sidebar-nav__item a:hover {
+  color: var(--primary-color);
+}
+.right-sidebar-nav__item a:focus {
+  color: var(--primary-color);
+}
+
+/* ------------------------extra utility------------------ */
 /* margin */
 .mr-6 {
   margin-right: 1.5rem;
@@ -168,4 +524,27 @@ html {
 
 .badge-dot.border-color-white {
   border-color: #fff;
+}
+
+/* ----------------media-queries------------------- */
+@media (max-width: 1280px) {
+  .sidebar {
+    padding: 2.5rem 1.25rem;
+  }
+  .component-wrapper {
+    padding: 2.5rem 0;
+    padding-right: 1.25rem;
+  }
+  .right-sidebar {
+    padding: 2.5rem 1.25rem;
+  }
+  .logo {
+    padding: 0 2rem;
+  }
+  .logo__text {
+    font-size: 1.15rem;
+  }
+  .main-nav__item + .main-nav__item {
+    margin-left: 1.75rem;
+  }
 }
