fix: fixed github link

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -161,6 +161,7 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 2;
 }
 .github-btn:focus {
   background-color: rgba(128, 128, 128, 0.3);
