feat: added routing to component page using react router v6

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -196,6 +196,12 @@ header {
   margin-bottom: 2rem;
   padding: 0 0.75rem;
 }
+.sidebar a {
+  display: inline-block;
+  text-decoration: none;
+  width: 100%;
+  height: 100%;
+}
 .sidebar-nav__item {
   list-style: none;
   color: var(--text-light);
@@ -204,11 +210,12 @@ header {
   border-radius: 0.2rem;
   font-weight: 600;
   cursor: pointer;
+  text-decoration: none;
 }
 .sidebar-nav__item:hover {
   background-color: var(--nav-hover);
 }
-.active-sidebar-nav {
+.active-sidebar-nav .sidebar-nav__item {
   background-color: var(--nav-hover);
   color: var(--primary-color);
   font-weight: 600;
