fix: added a few media queries

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -86,6 +86,7 @@ header {
   align-items: center;
   cursor: pointer;
   position: relative;
+  white-space: nowrap;
 }
 .main-nav__item button {
   border: none;
@@ -390,6 +391,7 @@ pre[class*="language-"] {
   cursor: pointer;
   margin-left: auto;
   margin-right: auto;
+  white-space: nowrap;
 }
 .right-sidebar-nav__item > .right-sidebar-nav__item--active {
   color: var(--primary-color);
@@ -556,5 +558,31 @@ pre[class*="language-"] {
   }
   .main-nav__item + .main-nav__item {
     margin-left: 1.75rem;
+  }
+}
+
+@media (max-width: 1024px) {
+  .right-sidebar {
+    display: none;
+  }
+  .component-wrapper {
+    /* padding-right: 2.5rem; */
+    max-width: 100%;
+  }
+  .header-btns {
+    width: calc(var(--sidebar-width) * 0.6);
+    max-width: calc(var(--sidebar-width) * 0.6);
+  }
+  .component-variant-header {
+    font-size: 1.5rem;
+  }
+  .component-intro-header {
+    font-size: 1.5rem;
+  }
+  .component-title {
+    font-size: 2rem;
+  }
+  .component-desc {
+    font-size: 1.1rem;
   }
 }
